<!--
  Copyright (C) 2017 Popular Movies, Stage 1

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>
    <string name="app_name">Popular Movies</string>
    <string name="overview">Plot Synopsis</string>
    <string name="vote_average">Vote Average</string>
    <string name="of">of</string>
    <string name="page_no">1</string>
    <string name="placeHolder_text_title">Android Lollipop</string>
    <string name="placeHolder_text_year">2015</string>
    <string name="rating">Rating</string>
    <string name="placeHolder_text_vote">(300)</string>
    <string name="placeHolder_text_rating">4.0</string>
</resources>
