<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margrinTop_five">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            tools:layout_editor_absoluteX="88dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margrinTop_five"
            android:layout_below="@id/iv_poster" />

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/placeHolder_text_title"
            android:layout_alignParentStart="true"
            android:layout_below="@id/divider" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeHolder_text_year"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tv_movie_title" />


        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margrinTop_five"
            android:text="@string/rating"
            android:textColor="@android:color/black"
            android:layout_alignParentEnd="true"
            android:paddingRight="@dimen/divider_height_content"
            android:layout_below="@id/divider"/>

        <TextView
            android:id="@+id/num_of_votes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeHolder_text_vote"
            android:textColor="@android:color/black"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/rating"/>
        <RatingBar
            android:id="@+id/rating_bar"
            style="@android:style/Widget.DeviceDefault.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="2"
            android:rating="4.1"
            android:stepSize="0.1"
            android:layout_toLeftOf="@id/num_of_votes"
            android:layout_below="@id/rating"/>
        <TextView
            android:id="@+id/rating_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_left_or_right"
            android:text="@string/placeHolder_text_rating"
            android:textColor="@android:color/black"
            android:layout_below="@id/rating"
            android:layout_toLeftOf="@id/rating_bar"/>
    </RelativeLayout>

</android.support.v7.widget.CardView>